--- a/Config/Config.Properties
+++ b/Config/Config.Properties
@@ -11,7 +11,7 @@ Prod_app_url=https://diksha.gov.in/
 
 #TESTDATA
 PreProd_test_data=\\TestData\\Preprod.xlsx
-Prod_test_data=\\TestData\\PrerodData.xlsx
+Prod_test_data=\\TestData\\Prod.xlsx
 
 #Files
 short_pdf=\\src\\main\\resources\\pdf_13.pdf
