--- a/Config/Config.Properties
+++ b/Config/Config.Properties
@@ -1,8 +1,8 @@
 #ENVIRONMENT SELECTOR
 #Uncomment the environment which needs to be selected
 
-Env=PreProd
-#Env=Prod
+#Env=PreProd
+Env=Prod
 
 
 #URL
